--- a/Getting_Started_with_a_MinION/Getting_Started_with_a_MinION.Rmd
+++ b/Getting_Started_with_a_MinION/Getting_Started_with_a_MinION.Rmd
@@ -28,6 +28,26 @@ output:
 
 ---
 
+# Chemistry history
+
+.pull-left[
+.center[R7 to R9.4]
+<img src=images/yield_plots_old.png width=110%>
+]
+.pull-right[
+.center[R9.4 April-2017]
+<img src=images/yield_plots_latest.png width=110%>
+]
+
+???
+
+When we first started using a MinION, a good run was around 400 Mb of data.
+We celebrated in the 1GB club using the R9 chemistry in June 2016 and then found 10 GB in April last year.
+Our R9.5 runs were actually a bit lower than the R9.4. This has been a common finding of regular nanopore users.
+Recently announced are R9.4.1 and R9.5.1 which we are yet to run.
+
+---
+
 # Quality Control
 
 Quantification.
@@ -47,21 +67,26 @@ And that the sample is of the distribution that we expect.
 
 # More is more (when using HMW)
 
-A 1 Âµg starting input is standard protocol since 8kb at 1 Âµg ~ 0.2 pmol.
-Reactions throughout the library prep and sequencing are based on the number of available ends.
+A 1 µg starting input is standard protocol...  
 
-==> a HMW library of 50 kb requries an input of 6 Âµg to achieve equal molarity.
+$$\text{if } \frac{1\ \mathrm{µg}}{8\ \mathrm{kb}} \approx 0.2\ \mathrm{pmol} $$
+
+$$\therefore \frac{50\ \mathrm{kb}}{0.2\ \mathrm{pmol}} \approx 6\ \mathrm{µg} $$
 
 ???
 
+Reactions throughout the library prep and sequencing are based on the number of available ends.
+A HMW library of 50 kb requries an input of 6 µg to achieve equal molarity of a 8kb library of 1µg  
+
+---
 
 # 'Mix by pipetting'
 
-Either don't mix by pipetting, or use wide-bore pipettes.
-
-70% ethanol can be increased to 80% ethanol for bead-clean ups.
-
-When using a high starting input, increase stringency on bead-clean ups (0.4X)
+* DON'T!  
+   + .small[Or use wide-bore pipettes only.]  
+* 70% - 80% Ethanol.  <br><br>
+* Lower ratio on bead-clean ups  
+   + .small[0.4X for HMW DNA]
 
 ???
 
@@ -74,33 +99,58 @@ When a high starting input is used with HMW, you will break more, so you need to
 
 # Some further tips
 
-* Storing flowcells the right way. The will last longer.
-* Bubbles are very bad.
+.pull-left[
+
+Storing flowcells
+   * .small[Avoid dynamic fridges]
+   * .small[Insulate from cycles]
+]
+
+.pull-right[
+
+Bubbles are bad.
+   <img src=http://www.science-practice.com/assets/york-minion/flowcell.jpg
+    width="120%">
+]
 
 ???
 
-Picture of bubble on flowcell.
-http://www.science-practice.com/blog/2016/05/18/york-minion/
+A frozen flowcell is a bad flowcell. 
+Flowcells should be kept at the same frigerated temperature. 
+Fridges that cycle will reduce the lifespan of these flowcells.
+The back of the fridge can sometimes freeze. Avoid placing flowcells there.
+Flowcells should be layed completely flat, to prevent bubbles and prevent further damage from bubbles.
+
+Any region of the flowcell that has been exposed to air is destroyed.
+In your early days of priming you will probably do this unintentionally.
+Practise priming with a used flowcell.
+
 
 ---
 
-# Protocols IO
-# Josh quicks library.
+
+# Experiment on an experiment.
+
+Reduce library-prep time with the  
+One-pot ligation from Josh Quick (UK)
+
+<a href="https://www.protocols.io/protocols?key=nanopore"><img src="https://synbiobeta.com/wp-content/uploads/sites/4/2016/10/protocols.io_.jpg"></a>
+
+
 
 ---
 
-# Chemistry history
 
-
-???
-
-SCOTT'S SLIDE
-
----
+class: center
 
 # The nanopore processing pipeline.
 
-<img src=images/pipeline.png width="120%">
+<img src=images/pipeline.png width="110%" float="left">
+
+???
+
+Prior to running any analysis on the data coming from the MinION,
+we need to basecall the data. That is converting the analogue signal here.
 
 
 https://twitter.com/biomickwatson/status/647395496114450432
@@ -113,6 +163,7 @@ https://www.drive5.com/usearch/manual/fastq_fig.jpg
 ???
 
 It is possible to run a nanopore sequencing device mulitple types without ever actually seeing the inside of a fast5.
+The .fast5 format is based on the hdf5 format from https://support.hdfgroup.org/HDF5/
 For what a .bcl file is to Illumina, a .fast5 file is to nanopore. 
 Other than the squiggle data as shown above, there are a few other metrics in the fast5 file that may be of interest.
 
@@ -121,7 +172,13 @@ Other than the squiggle data as shown above, there are a few other metrics in th
 
 # Basecalling: From .fast5 to .fastq.
 
-Basecalling, is computationally intensive, regardless of the algorithm.
+Basecalling, is computationally intensive, regardless of the software.
+
+Available software:
+
+
+
+???
 
 You have a plethora of options, albacore, guppy and Metrichor.
 For high-quality yield, straight to the HPC.
@@ -130,6 +187,14 @@ How do I place data on the HPC?
 ---
 
 # Alignment algorithms
+
+Guppy, Albacore and Metrichor.
+
+...and a plethora of third-party options too!
+
+???
+
+Three ONT options are Guppy, Albacore and Metrichor.
 
 ---
 
