Added lines in Quality Control slide
Also placed in press p to view notes

--- a/Getting_Started_with_a_MinION/Getting_Started_with_a_MinION.Rmd
+++ b/Getting_Started_with_a_MinION/Getting_Started_with_a_MinION.Rmd
@@ -36,11 +36,11 @@ Recently announced are R9.4.1 and R9.5.1 which we are yet to run.
 # Quality Control
 
 * Quantification.
-    + Qubit
+    + Qubit<br></br>
 * Purity.
-    + Nanodrop
+    + Nanodrop<br></br>
 * Distribution.
-    + TapeStation
+    + TapeStation<br></br>
 
 ???
 
