--- a/Getting_Started_with_a_MinION/Getting_Started_with_a_MinION.Rmd
+++ b/Getting_Started_with_a_MinION/Getting_Started_with_a_MinION.Rmd
@@ -14,6 +14,8 @@ output:
     self_contained: no
 ---
 
+class: hint-slide
+
 ## Chemistry history 
 .left-column[.center[R7 to R9.4]
 <img src=images/yield_plots_old.png width=100%>
