--- a/PeterMac_CSSTRING_2018/PeterMac_CS_string_2018.Rmd
+++ b/PeterMac_CSSTRING_2018/PeterMac_CS_string_2018.Rmd
@@ -2,7 +2,7 @@
 title: "Nanopore and Minimap2 things"
 subtitle: "<br> PeterMac Floor 12"
 author: "Alexis Lucattini"
-date: "Thu 30th May 2018"
+date: "Thu 31st May 2018"
 output:
   xaringan::moon_reader:
     css: "libs/remark-css-0.0.1/nanopore_dunedin.css"
@@ -216,6 +216,31 @@ Cases:
 + ReadStartContig, RefStartContig  `# Start of indel/match`
 + ReadEndContig, RefEndContig  `# End of indel/match`
 ]
+
+---
+
+# The simple things:
+
+```
+def extractEditMetricsFromBam(bam):
+    '''
+    loop over a bam file and get the edit distance to the reference genome
+    stored in the NM tag
+    scale by aligned read length
+    '''
+    samfile = pysam.AlignmentFile(bam, "rb")
+    return [(read.get_tag("NM"), read.query_alignment_length) 
+            for read in samfile.fetch()
+            if read.get_tag("tp") == "P"]
+
+```
+---
+
+# Slightly more complex things
+
+[My GitHub gist](https://gist.github.com/alexiswl/b52884c82e7afd28aec7bcda20b6f5fa
+)
+
 ---
 
 # Thank yous.
