--- a/NanoporeSequencingAtTheAGRF/NanoporeSequencingAtTheAGRF.Rmd
+++ b/NanoporeSequencingAtTheAGRF/NanoporeSequencingAtTheAGRF.Rmd
@@ -34,9 +34,6 @@ output:
 ---
 
 ## AGRF PromethION in focus
----
-
-# The PromethION!
 
 Kit-9, sample sensitive, great N50!
 
@@ -50,10 +47,14 @@ Kit-9, sample sensitive, great N50!
 ---
 
 ## Bioinformatics is a bottleneck
-* Lots and lots of files (>20M) <br>
-* Few ways to do one thing, benchmarking needed. <br>
-* Getting help and resources. <br>
-* Denovo assemblies have always been really hard. <br>
+* Lots and lots of files (>20M)
+
+* Few ways to do one thing, benchmarking needed.
+
+* Getting help and resources, community in development.
+
+* Denovo assemblies have always been really hard.
+
 * Portable bioinformatics is difficult.
 
 ---
@@ -113,7 +114,7 @@ Kit-9, sample sensitive, great N50!
 
 * Different algorithms give slightly different results.
 
-* Check out Ryan Wick's [base-calling comparison repo](https://github.com/rrwick/Basecalling-comparison)
+* .small[Check out Ryan Wick's [base-calling comparison repo](https://github.com/rrwick/Basecalling-comparison)]
 
 
 ???
@@ -132,18 +133,36 @@ Kit-9, sample sensitive, great N50!
 [Docs](https://wub.readthedocs.io/en/latest/)
 ]
 
+---
+
 ## WUB cont.
 
-<img src=./images/basestats.png width=80%>
+.pull-left[
+<img src=./images/basestats.png width=100%>
+]
+.pull-right[
+<img src=./images/per_read_accuracies.png width=100%>
 
+]
 ---
 
 ## NanoPlot
 
+.pull-left[
+.baby-bear[
+* Plot run metrics for a MinION run
 * [Repo on GitHub](https://github.com/wdecoster/NanoPlot)
-* Also see NanoComp, NanoStat, NanoFilt and NanoLyse
+* Also see 
+  + NanoComp
+  + NanoStat
+  + NanoFilt
+  + NanoLyse
+]
+]
 
-<img src="https://github.com/wdecoster/NanoPlot/raw/master/examples/scaled_MappingQualityvsAverageBaseQuality_kde.png" width="25%">
+.pull-right[
+<img src="https://github.com/wdecoster/NanoPlot/raw/master/examples/scaled_MappingQualityvsAverageBaseQuality_kde.png" width="100%">
+]
 
 ???
 
@@ -152,7 +171,8 @@ Kit-9, sample sensitive, great N50!
 ## Betaduck
 
 * Package to tidy up and evaluate sequencing runs on PromethION Beta.
-* Can be used on MinION datasets as well (make sure not to over-allocate resources on a laptop)
+* Can be used on MinION datasets as well
+  + small[make sure not to over-allocate resources on a laptop]
 
 .pull-left[
 [GitHub](https://www.github.com/alexiswl/betaduck)
@@ -164,18 +184,23 @@ Kit-9, sample sensitive, great N50!
 ---
 
 ## Betaduck cont.
-<img src="https://github.com/alexiswl/betaduck/raw/master/images/example.pair_plot.png" width="25%">
 
+.pull-left[
+<img src="https://github.com/alexiswl/betaduck/raw/master/images/example.pair_plot.png" width="95%">
+]
+.pull-right[
+<img src="https://github.com/alexiswl/betaduck/raw/master/images/example.flowcellmap.png" width="95%">
+]
 ---
 
 ## Betaduck cont.
-<img src="https://github.com/alexiswl/betaduck/raw/master/images/example.events_ratio.png" width="25%">
+.pull-left[
+<img src="images/example.events_ratio.png" width="100%">
+]
+.pull-right[
+<img src="images/example.pore_speed.png" width="100%">
 
----
-
-## Betaduck cont.
-<img src="https://github.com/alexiswl/betaduck/raw/master/images/example.pore_speed.png" width="25%">
-
+]
 ---
 
 ## Porechop, Filtlong, Unicycler
@@ -183,11 +208,7 @@ Kit-9, sample sensitive, great N50!
 Ryan Wick's repos set for:
 * [Demultiplexing / Trimming Adapters](https://github.com/rrwick/porechop)
 * [Removing poor quality reads](https://github.com/rrwick/filtlong)
-* [Circular-hybrid assemblies](https://github.com/rrwick/unicycler)
-
-
-???
-
+* [Generating Circular-hybrid assemblies](https://github.com/rrwick/unicycler)
 
 ---
 
@@ -255,10 +276,18 @@ Jared T. Simpson's [nanopolish](https://github.com/jts/nanopolish) uses signal-l
 ---
 
 
-## Haplotyping methylation combo
+## Haplotyping-methylation combo
 
-https://github.com/scottgigante/haplotyped-methylome
+.center[
+<img src="images/scott_paper_methylation_differences.png" width="55%">
+]
 
+.pull-left[
+[Bio-Xriv Paper](https://www.biorxiv.org/content/early/2018/10/17/445924)
+]
+.pull-right[
+[Scott's GitHub Haplotype-Methylome Repo](https://github.com/scottgigante/haplotyped-methylome)
+]
 ???
 Mention of scott's paper, github and methylation paper
 todo: provide details of scott's pipeline.
@@ -267,14 +296,14 @@ todo: provide details of scott's pipeline.
 
 ## Some tutorial references
 
-[Tim Kahlke - Toast 2018](https://github.com/timkahlke/toast2018)
-VM based tutorial. Covers QC to Assembly.
+[Tim Kahlke - Toast 2018](https://github.com/timkahlke/toast2018)  
+VM based tutorial. Covers QC to methylation to assembly.
 
-https://github.com/HadrienG/tutorials/blob/master/docs/nanopore.md
+
+[Hadrien Gourle](https://github.com/HadrienG/tutorials/blob/master/docs/nanopore.md)  
+Simple fastq to assembly notebook.
 
 ???
-
-todo: Describe each and use hyperlinks
 
 ---
 class: genomics-innovation-hub, gih-slide-number
@@ -285,7 +314,7 @@ class: genomics-innovation-hub, gih-slide-number
 
 Contact: <a href="mailto:alexis.lucattini@agrf.org.au">Alexis Lucattini</a>  
 Contact: <a href="mailto:Jafar.Jabbari@agrf.org.au"> Jafar Jabbari</a>  
-.kinda-small[Website: <a href="https://genomicsinnovationhub.org.au">GenomicsInnovationHub.org.au</a>]]
+.kinda-small[Website: <a href="https://genomicsinnovationhub.org.au">GenomicsInnovationHub.org.au</a>]
 
 ---
 
