--- a/NanoporeSequencingAtTheAGRF/NanoporeSequencingAtTheAGRF.Rmd
+++ b/NanoporeSequencingAtTheAGRF/NanoporeSequencingAtTheAGRF.Rmd
@@ -110,7 +110,7 @@ Kit-9, sample sensitive, great N50!
 
 ## Basecalling methods
 ### GPU & CPU.
-* GPUs much faster. Dogfish current basecaller in PromethION.
+* GPUs much faster. .small[Guppy 1.8.3 is the current basecalling version]
 
 * Different algorithms give slightly different results.
 
@@ -172,7 +172,7 @@ Kit-9, sample sensitive, great N50!
 
 * Package to tidy up and evaluate sequencing runs on PromethION Beta.
 * Can be used on MinION datasets as well
-  + small[make sure not to over-allocate resources on a laptop]
+  + .small[make sure not to over-allocate resources on a laptop]
 
 .pull-left[
 [GitHub](https://www.github.com/alexiswl/betaduck)
